Bug 128733 - EDITING Bar chart secondary X axis labels appear on the tickmarks
Summary: EDITING Bar chart secondary X axis labels appear on the tickmarks
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2019-11-12 09:08 UTC by NISZ LibreOffice Team
Modified: 2019-11-14 11:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (13.65 KB, application/binary)
2019-11-12 09:08 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Writer nightly 09-16 and 11-02 (118.02 KB, image/png)
2019-11-12 09:09 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-12 09:08:13 UTC
Description:
In recent 6.4 master the bar charts secondary X axis labels appear on the tickmarks instead of between them.

Steps to Reproduce:
1.	Create a default bar chart in Writer
2.	Enable secondary X and Y axes


Actual Results:
The Row 1-4 axis labels appear on the tickmarks on the secondary X axis unlike on the primary, where they appear between the tickmarks.

Expected Results:
The labels appear between the tickmarks


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-11-12 09:08:55 UTC
Created attachment 155733 [details]
Example file from Writer
Comment 2 NISZ LibreOffice Team 2019-11-12 09:09:15 UTC
Created attachment 155734 [details]
Screenshot of the original document side by side in Writer nightly 09-16 and 11-02
Comment 3 Balázs Varga 2019-11-12 10:05:59 UTC
Confirmed in:

Version: 6.4.0.0.alpha1+ (x64)
Build ID: 45c40f88e2aabfdeb8890ce7dcfd8c9a3d212e23
CPU threads: 8; OS: Windows 10.0 Build 14393; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Comment 5 Commit Notification 2019-11-13 10:00:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/71f9961488232697bcdb37db349569a20f15bb2d

tdf#128733 Chart import: fix secondary X axis

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-11-14 11:35:31 UTC
Verified in

Version: 6.4.0.0.beta1+
Build ID: 956153105bbf900f3b20aea98338148cf545fa0e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balazs Varga, thanks for fixing this issue!