tdf#128733 Chart import: fix secondary X axis

shiftedcategoryposition value. When inserting secondary axes it applies
the ShiftedCategoryPosition of the main axis.

Regression from the commit 111c260ab2883b7906f1a66e222dbf4dc3c58c4f
(tdf#127777 OOXML chart export: fix "CrossBetween" for not imported
charts)

Change-Id: Ia043fe2873f633cbd5f7db206cf9d1b0d2f8c34c
Reviewed-on: https://gerrit.libreoffice.org/82511
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>